--- a/designs/UI/signup.html
+++ b/designs/UI/signup.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="signup.html">Sign up</a>
@@ -41,16 +41,21 @@
                   </form>
                 </div>
               </nav>
-
-              <div class="jumbotron">
-                    <h1 class="display-3">Hey there connoisseur!</h1>
-                    <p class="lead">This is where you can share and keep track of all you lovely recipes.</p>
-                    <hr class="my-4">
-                    <p>We built this especially for you</p>
-                    <p class="lead">
-                      <a class="btn btn-info btn-lg" href="signup.html" role="button">Sign up</a>
-                    </p>
-                  </div>
+        <form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  
+  </fieldset>
+  
+  <button type="submit" class="btn btn-info">Submit</button>
+</form>
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
