Added Log in page

--- a/designs/UI/login.html
+++ b/designs/UI/login.html
@@ -29,11 +29,14 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="signup.html">Sign up</a>
                     </li>
+                    <li class="nav-item active">
+                            <a class="nav-link" href="login.html">Log in <span class="sr-only">(current)</span></a>
+                          </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -43,12 +46,11 @@
               </nav>
 
               <div class="jumbotron">
-                    <h1 class="display-3">Hey there connoisseur!</h1>
-                    <p class="lead">This is where you can share and keep track of all you lovely recipes.</p>
+                    <h1 class="display-3">Welcome back connoisseur!</h1>
+                    <p class="lead">All you lovely recipes are safe and sound here.</p>
                     <hr class="my-4">
                     <p>We built this especially for you</p>
                     <p class="lead">
-                      <a class="btn btn-info btn-lg" href="signup.html" role="button">Sign up</a>
                       <a class="btn btn-info btn-lg" href="signup.html" role="button">Log in</a>
                     </p>
                   </div>
