--- a/designs/UI/signup.html
+++ b/designs/UI/signup.html
@@ -29,10 +29,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="signup.html">Sign up</a>
+                      <a class="nav-link" href="signup.html">Sign up <span class="sr-only">(current)</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
