--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Yummy Recipes</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="signup.html">Sign up</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recipes-list.html">Recipes</a>
+                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
