--- a/designs/UI/recipes-list.html
+++ b/designs/UI/recipes-list.html
@@ -24,7 +24,7 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="#">Yummy Recipes</a>
+                <a class="navbar-brand" href="index.html">Yummy Recipes</a>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
@@ -32,8 +32,11 @@
                       <a class="nav-link" href="index.html">Home</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="signup.html">Sign up <span class="sr-only">(current)</a>
+                      <a class="nav-link" href="signup.html">Sign up</a>
                     </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="recipes-list.html">Recipes<span class="sr-only">(current)</a>
+                          </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -41,21 +44,16 @@
                   </form>
                 </div>
               </nav>
-        <form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  
-  </fieldset>
-  
-  <button type="submit" class="btn btn-info">Submit</button>
-</form>
+
+              <div class="list-group">
+                    <a href="#" class="list-group-item active">
+                      Chapati Madondo
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">Ugali Matumbo</a>
+                    <a href="#" class="list-group-item list-group-item-action">Tumbukiza</a>
+                    <a href="#" class="list-group-item list-group-item-action">Chapati Dunga</a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">Toast Bandika</a>
+                  </div>
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
