Added ability to view recipes

--- a/designs/UI/recipes-list.html
+++ b/designs/UI/recipes-list.html
@@ -45,15 +45,29 @@
                 </div>
               </nav>
 
-              <div class="list-group">
-                    <a href="#" class="list-group-item active">
-                      Chapati Madondo
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action">Ugali Matumbo</a>
-                    <a href="#" class="list-group-item list-group-item-action">Tumbukiza</a>
-                    <a href="#" class="list-group-item list-group-item-action">Chapati Dunga</a>
-                    <a href="#" class="list-group-item list-group-item-action disabled">Toast Bandika</a>
+              <div class="card">
+                    <div class="card-block">
+                      <h4 class="card-title">Ugali Matumbo</h4>
+                      <h6 class="card-subtitle mb-2 text-muted">To serve two</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <!--<a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>-->
+                      <button type="button" class="btn btn-primary">Edit Recipe</button>
+                      <button type="button" class="btn btn-danger">Delete Recipe</button>
+                    </div>
                   </div>
+
+                  <div class="card">
+                  <div class="card-block">
+                    <h4 class="card-title">Chapati Madondo</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">To serve two</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <!--<a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>-->
+                    <button type="button" class="btn btn-primary">Edit Recipe</button>
+                    <button type="button" class="btn btn-danger">Delete Recipe</button>
+                  </div>
+                </div>
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
