--- a/designs/UI/ugali-matumbo.html
+++ b/designs/UI/ugali-matumbo.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index">Home</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="signup.html">Sign up</a>
@@ -40,21 +40,11 @@
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
                   </form>
                 </div>
               </nav>
 
-              <div class="jumbotron">
-                    <h1 class="display-3">Hey there connoisseur!</h1>
-                    <p class="lead">This is where you can share and keep track of all you lovely recipes.</p>
-                    <hr class="my-4">
-                    <p>We built this especially for you</p>
-                    <p class="lead">
-                      <a class="btn btn-info btn-lg" href="signup.html" role="button">Sign up</a>
-                      <a class="btn btn-info btn-lg" href="signup.html" role="button">Log in</a>
-                    </p>
-                  </div>
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
