--- a/designs/UI/login.html
+++ b/designs/UI/login.html
@@ -24,7 +24,7 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="#">Yummy Recipes</a>
+                <a class="navbar-brand" href="index.html">Yummy Recipes</a>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
@@ -37,6 +37,9 @@
                     <li class="nav-item active">
                             <a class="nav-link" href="login.html">Log in <span class="sr-only">(current)</span></a>
                           </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="recipes-list.html">Recipes<span class="sr-only">(current)</a>
+                        </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
