Changed reccipe contents in 'ugali matumbo'

--- a/designs/UI/login.html
+++ b/designs/UI/login.html
@@ -57,6 +57,9 @@
                       <a class="btn btn-info btn-lg" href="signup.html" role="button">Log in</a>
                     </p>
                   </div>
+                  <nav class="navbar fixed-bottom navbar-light bg-info">
+                        <p class="text-center">&copy 2017 | Allan Koech</p>
+                      </nav> 
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
