--- a/designs/UI/recipes-list.html
+++ b/designs/UI/recipes-list.html
@@ -68,6 +68,9 @@
                     <button type="button" class="btn btn-danger">Delete Recipe</button>
                   </div>
                 </div>
+                <nav class="navbar fixed-bottom navbar-light bg-info">
+                        <p class="text-center">&copy 2017 | Allan Koech</p>
+                      </nav> 
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
