--- a/designs/UI/ugali-matumbo.html
+++ b/designs/UI/ugali-matumbo.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index">Home</span></a>
+                      <a class="nav-link" href="index.html">Home</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="signup.html">Sign up</a>
@@ -44,6 +44,19 @@
                   </form>
                 </div>
               </nav>
+
+              <div class="card">
+  <div class="card-block">
+    <h4 class="card-title">Card title</h4>
+    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+    <p class="card-text">A staple food in Kenya</p>
+    <a href="#" class="card-link">Ingredients</a>
+    <a href="#" class="card-link">Recipe</a>
+  </div>
+  <nav class="navbar fixed-bottom navbar-light bg-info">
+        <p class="text-center">&copy 2017 | Allan Koech</p>
+      </nav> 
+</div>
 
 </div>
 
