--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -19,7 +19,7 @@
     <![endif]-->
   </head>
   <body>
-        <div class="container">
+      <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-info">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="signup.html">Sign up</a>
@@ -46,16 +46,19 @@
               </nav>
 
               <div class="jumbotron">
-                    <h1 class="display-3">Hey there connoisseur!</h1>
+                    <h1 class="display-3">Hey there gourmet!</h1>
                     <p class="lead">This is where you can share and keep track of all you lovely recipes.</p>
                     <hr class="my-4">
                     <p>We built this especially for you</p>
                     <p class="lead">
                       <a class="btn btn-info btn-lg" href="signup.html" role="button">Sign up</a>
-                      <a class="btn btn-info btn-lg" href="signup.html" role="button">Log in</a>
+                      <a class="btn btn-info btn-lg" href="login.html" role="button">Log in</a>
                     </p>
-                  </div>
-</div>
+                  </div>  
+                  <nav class="navbar fixed-bottom navbar-light bg-info">
+                      <p class="text-center">&copy 2017 | Allan Koech</p>
+                    </nav>        
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
