--- a/designs/UI/signup.html
+++ b/designs/UI/signup.html
@@ -59,6 +59,9 @@
   
   <button type="submit" class="btn btn-info">Submit</button>
 </form>
+<nav class="navbar fixed-bottom navbar-light bg-info">
+        <p class="text-center">&copy 2017 | Allan Koech</p>
+      </nav> 
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
