fixed span class error of recipes link in signup page

--- a/designs/UI/signup.html
+++ b/designs/UI/signup.html
@@ -35,7 +35,7 @@
                       <a class="nav-link" href="signup.html">Sign up <span class="sr-only">(current)</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="recipes-list.html">Recipes<span class="sr-only">(current)</a>
+                            <a class="nav-link" href="recipes-list.html">Recipes</a>
                           </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
