Changes in recipes text

--- a/designs/UI/ugali-matumbo.html
+++ b/designs/UI/ugali-matumbo.html
@@ -47,8 +47,8 @@
 
               <div class="card">
   <div class="card-block">
-    <h4 class="card-title">Card title</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+    <h4 class="card-title">Ugali Matumbo</h4>
+    <h6 class="card-subtitle mb-2 text-muted">To serve two</h6>
     <p class="card-text">A staple food in Kenya</p>
     <a href="#" class="card-link">Ingredients</a>
     <a href="#" class="card-link">Recipe</a>
