--- a/designs/UI/recipes-list.html
+++ b/designs/UI/recipes-list.html
@@ -49,7 +49,7 @@
                     <div class="card-block">
                       <h4 class="card-title">Ugali Matumbo</h4>
                       <h6 class="card-subtitle mb-2 text-muted">To serve two</h6>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">A staple in Kenyan homes</p>
                       <!--<a href="#" class="card-link">Card link</a>
                       <a href="#" class="card-link">Another link</a>-->
                       <button type="button" class="btn btn-primary">Edit Recipe</button>
@@ -61,7 +61,7 @@
                   <div class="card-block">
                     <h4 class="card-title">Chapati Madondo</h4>
                     <h6 class="card-subtitle mb-2 text-muted">To serve two</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Just about everyones favorite meal!</p>
                     <!--<a href="#" class="card-link">Card link</a>
                     <a href="#" class="card-link">Another link</a>-->
                     <button type="button" class="btn btn-primary">Edit Recipe</button>
