added background image

--- a/designs/UI/index.html
+++ b/designs/UI/index.html
@@ -18,8 +18,10 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="background-image:url(images/cover.jpg)">
+      
       <div class="container">
+          
         <nav class="navbar navbar-toggleable-md navbar-light bg-info">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -54,7 +56,8 @@
                       <a class="btn btn-info btn-lg" href="signup.html" role="button">Sign up</a>
                       <a class="btn btn-info btn-lg" href="login.html" role="button">Log in</a>
                     </p>
-                  </div>  
+              </div>  
+
                   <nav class="navbar fixed-bottom navbar-light bg-info">
                       <p class="text-center">&copy 2017 | Allan Koech</p>
                     </nav>        
