--- a/designs/UI/login.html
+++ b/designs/UI/login.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="background-image:url(images/cover.jpg)">
         <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-info">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
               </nav>
 
               <div class="jumbotron">
-                    <h1 class="display-3">Welcome back connoisseur!</h1>
+                    <h1 class="display-3">Welcome back gourmet!</h1>
                     <p class="lead">All you lovely recipes are safe and sound here.</p>
                     <hr class="my-4">
                     <p>We built this especially for you</p>
