--- a/designs/UI/ugali-matumbo.html
+++ b/designs/UI/ugali-matumbo.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="background-image:url(images/cover.jpg)">
         <div class="container">
         <nav class="navbar navbar-toggleable-md navbar-light bg-info">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
